cabal-version:   3.0
name:            qml-hs
version:         0.1.0.0
license:         LGPL-3.0-or-later
author:          James Hobson
maintainer:      James Hobson
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall -Wno-unused-do-bind

library
    import:           warnings
    other-modules:  Graphics.UI.Qml.Internal.Types
                      Graphics.UI.Qml.Internal.QGuiApplication
                      Graphics.UI.Qml.Internal.QApplication
                      Graphics.UI.Qml.Internal.QQmlApplicationEngine
                      Graphics.UI.Qml.Internal.QQuickImageProvider
                      Graphics.UI.Qml.Internal.QPixmap
                      Graphics.UI.Qml.Internal.QQuickStyle
                      Graphics.UI.Qml.Internal.QQuickView
                      Graphics.UI.Qml.Internal.QQmlContext
                      Graphics.UI.Qml.Internal.String
                      Graphics.UI.Qml.Internal.QVariant
                      Graphics.UI.Qml.Internal.QMetaObject
                      Graphics.UI.Qml.Internal.QAbstractListModel
                      Graphics.UI.Qml.Internal.QAbstractTableModel
                      Graphics.UI.Qml.Internal.QAbstractItemModel
                      Graphics.UI.Qml.Internal.QObject
                      Graphics.UI.Qml.Internal.QModelIndex
                      Graphics.UI.Qml.Internal.QHash
                      Graphics.UI.Qml.Internal.QResource
                      Graphics.UI.Qml.Internal.QUrl
                      Graphics.UI.Qml.Internal.QDeclarative
                      Graphics.UI.Qml.Internal.QPointer
                      Graphics.UI.Qml.LowLevel.QVariant
                      Graphics.UI.Qml.LowLevel.QApplication
                      Graphics.UI.Qml.LowLevel.QQmlApplicationEngine
                      Graphics.UI.Qml.LowLevel.QMetaObject
                      Graphics.UI.Qml.LowLevel.QObject
                      Graphics.UI.Qml.LowLevel.QUrl
    exposed-modules:  Graphics.UI.Qml
    build-depends:    base <5,
                      bytestring,
                      mtl,
                      stm,
                      containers
    build-tool-depends: hsc2hs:hsc2hs
    pkgconfig-depends:  DOtherSide
    hs-source-dirs:   src
    default-language: Haskell2010


executable testbench
    import: warnings
    main-is: Main.hs
    hs-source-dirs: test
    default-language: Haskell2010
    build-depends: base, qml-hs, stm
    ghc-options: -threaded
